INCLUDES = -I$(top_srcdir)/src/include

SUBDIRS = .
noinst_LTLIBRARIES = \
 libmpi.la

libmpi_la_LDFLAGS =
libmpi_la_SOURCES = \
 mpi.h \
 mpi-asm-defs.h \
 longlong.h	   \
 mpih-add1.c \
 mpih-sub1.c\
 mpih-mul1.c\
 mpih-mul2.c \
 mpih-mul3.c\
 mpih-lshift.c\
 mpih-rshift.c\
 udiv-w-sdiv.c \
	      mpi-add.c      \
	      mpi-bit.c      \
	      mpi-cmp.c      \
	      mpi-div.c      \
	      mpi-gcd.c      \
	      mpi-internal.h \
	      mpi-inline.h   \
	      mpi-inline.c   \
	      mpi-inv.c      \
	      mpi-mul.c      \
	      mpi-pow.c      \
	      mpi-mpow.c     \
	      mpi-scan.c     \
	      mpicoder.c     \
	      mpih-div.c     \
	      mpih-mul.c     \
	      mpiutil.c 



